--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "keywords": [
     "web",
@@ -20,5 +21,9 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.12"
-  }
+  },
+  "repository": {
+		"type": "git",
+		"url": "https://github.com/Moe95524/Timestamp-Microservice"
+	}
 }
